--- a/contact.html
+++ b/contact.html
@@ -11,10 +11,11 @@
       background: #181820;
       color: #e8e6ff;
       margin: 0;
+      min-height: 100vh;
     }
     header {
       background: transparent;
-      padding: 2rem 2.5rem;
+      padding: 2rem 2.5rem 1.2rem 2.5rem;
       display: flex;
       align-items: center;
     }
@@ -22,105 +23,191 @@
       height: 60px;
       filter: brightness(0) invert(1);
     }
-    h1 {
-      font-size: 2.6rem;
-      margin-bottom: 2rem;
-      color: #b6befb;
-      text-align: center;
-      font-weight: 700;
+    .contact-layout {
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      gap: 3.5rem;
+      max-width: 1100px;
+      margin: 3.5rem auto 0 auto;
+      padding: 2rem 0 3rem 0;
     }
-.contact-section {
-  max-width: 540px;                /* Increased from 430px */
-  margin: 4rem auto;
-  background: #22232c;
-  border-radius: 16px;
-  box-shadow: 0 1px 16px #0405121a;
-  padding: 2.5rem 3.2rem 2rem 3.2rem;  /* Wider padding for balanced look */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  opacity: 0;
-  transform: translateY(60px);
-  animation: fadeUp 1.1s 0.13s forwards;
-}
-@keyframes fadeUp {
-  to { opacity: 1; transform: translateY(0);}
-}
-form {
-  width: 100%;
-}
-.form-grid {
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  gap: 1.1rem 1.4rem;
-  align-items: center;       /* This vertically centers text with input */
-  margin-bottom: 1.3rem;
-}
-label {
-  font-weight: 600;
-  letter-spacing: .07em;
-  color: #fff;
-  justify-self: end;
-  align-self: center;        /* Vertically center label within grid cell */
-  white-space: nowrap;       /* Prevents breaking words into two lines */
-  text-align: right;         /* Align label text to right for neatness */
-}
-@media (max-width: 700px) {
-  .form-grid { 
-    grid-template-columns: 1fr;
-    gap: 0.4rem 0;
-  }
-  label { 
-    justify-self: start; 
-    text-align: left; 
-    margin-top: 0.7rem; 
-    white-space: normal;     /* Allow wrapping on small screens */
-  }
-}
-input, textarea {
-  width: 100%;
-  padding: 0.7rem 1rem;
-  border-radius: 7px;
-  border: 1px solid #34344e;
-  background: #232330;
-  color: #fff;
-  font-size: 1rem;
-  resize: none;
-  outline: none;
-  transition: border 0.2s;
-}
-input:focus, textarea:focus {
-  border: 1.5px solid #2563eb;
-}
-.cta-button {
-  width: 100%;
-  background: #2563eb;
-  color: #fff;
-  border: none;
-  padding: 1.15rem 0;
-  font-size: 1.15rem;
-  font-weight: 700;
-  border-radius: 7px;         /* Was 2rem - now square */
-  margin-top: .7rem;
-  box-shadow: 0 4px 20px #232f3e19;
-  letter-spacing: .04em;
-  cursor: pointer;
-  transition: background 0.18s, color 0.18s, transform 0.09s;
-}
+    .contact-details {
+      flex: 1 1 320px;
+      background: transparent;
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+    }
+    .contact-details h2 {
+      font-size: 2.2rem;
+      margin-bottom: 0.4rem;
+      color: #fff;
+      font-weight: 700;
+      letter-spacing: -1px;
+    }
+    .contact-details h4 {
+      font-size: 1.17rem;
+      margin: .2rem 0 1.5rem 0;
+      font-weight: 400;
+      color: #b6befb;
+      letter-spacing: 0;
+    }
+    .contact-details .descriptor {
+      margin-bottom: 2rem;
+      font-size: 1.07rem;
+      color: #c2c7e7;
+      max-width: 350px;
+      line-height: 1.7;
+    }
+    .info-list {
+      list-style: none;
+      padding: 0;
+      margin: 0 0 1.8rem 0;
+    }
+    .info-list li {
+      display: flex;
+      align-items: center;
+      margin-bottom: 1.1rem;
+      gap: 1.05rem;
+      font-size: 1.13rem;
+      color: #fff;
+      font-weight: 600;
+      letter-spacing: -.01em;
+    }
+    .info-list li .icon {
+      background: #22232c;
+      color: #8ca5f5;
+      width: 36px; height: 36px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 50%;
+      font-size: 1.3rem;
+      margin-right: 0.4em;
+    }
+    .contact-social {
+      display: flex;
+      gap: 1rem;
+      margin: 1.7rem 0 0 0;
+    }
+    .contact-social a {
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
+      background: #232330;
+      color: #b6befb;
+      width: 38px; height: 38px;
+      border-radius: 50%;
+      font-size: 1.25rem;
+      transition: background .15s, color .15s;
+      text-decoration: none;
+    }
+    .contact-social a:hover {
+      background: #2563eb; color: #fff;
+    }
+
+    /* Contact form card */
+    .contact-section {
+      flex: 1 1 420px;
+      background: #22232c;
+      border-radius: 16px;
+      box-shadow: 0 1px 16px #0405121a;
+      padding: 2.5rem 3.2rem 2rem 3.2rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      opacity: 0;
+      transform: translateY(60px);
+      animation: fadeUp 1.1s 0.13s forwards;
+      min-width: 320px;
+      max-width: 460px;
+    }
+    @keyframes fadeUp {
+      to { opacity: 1; transform: translateY(0);}
+    }
+    .contact-section h1 {
+      font-size: 2.1rem;
+      font-weight: 700;
+      color: #b6befb;
+      margin-bottom: 2rem;
+      text-align: center;
+    }
+    form { width: 100%; }
+    .form-grid {
+      display: grid;
+      grid-template-columns: 1fr 2fr;
+      gap: 1.1rem 1.4rem;
+      align-items: center;
+      margin-bottom: 1.3rem;
+    }
+    label {
+      font-weight: 600;
+      letter-spacing: .07em;
+      color: #fff;
+      justify-self: end;
+      align-self: center;
+      white-space: nowrap;
+      text-align: right;
+    }
+    input, textarea {
+      width: 100%;
+      padding: 0.7rem 1rem;
+      border-radius: 7px;
+      border: 1px solid #34344e;
+      background: #232330;
+      color: #fff;
+      font-size: 1rem;
+      resize: none;
+      outline: none;
+      transition: border 0.2s;
+    }
+    input:focus, textarea:focus {
+      border: 1.5px solid #2563eb;
+    }
+    .cta-button {
+      width: 100%;
+      background: #2563eb;
+      color: #fff;
+      border: none;
+      padding: 1.15rem 0;
+      font-size: 1.15rem;
+      font-weight: 700;
+      border-radius: 7px;
+      margin-top: .7rem;
+      box-shadow: 0 4px 20px #232f3e19;
+      letter-spacing: .04em;
+      cursor: pointer;
+      transition: background 0.18s, color 0.18s, transform 0.09s;
+    }
     .cta-button:active {
-  transform: scale(0.965);
-  background: #1d47b8; /* Slightly darker when pressed */
-  box-shadow: 0 2px 10px #232f3e40;
-}
-.cta-button:hover {
-  background: #1a2a90;
-}
-@media (max-width: 700px) {
-  .contact-section { padding: 1.2rem .4rem; }
-  .form-grid { grid-template-columns: 1fr; gap: 0.4rem 0; }
-  label { justify-self: start; margin-top: 0.7rem; }
-}
+      transform: scale(0.965);
+      background: #1d47b8;
+      box-shadow: 0 2px 10px #232f3e40;
+    }
+    .cta-button:hover {
+      background: #1a2a90;
+    }
+    @media (max-width: 1050px) {
+      .contact-layout {
+        flex-direction: column;
+        padding: 1.2rem 0 2.2rem 0;
+      }
+      .contact-section, .contact-details { max-width: 97vw; }
+    }
+    @media (max-width: 700px) {
+      header { padding: 1.2rem .7rem;}
+      .contact-layout { gap: 1.8rem; }
+      .contact-section {
+        padding: 1.2rem .7rem;
+        min-width: unset; max-width: 99vw;
+      }
+      .form-grid { grid-template-columns: 1fr; gap: 0.48rem 0; }
+      label { justify-self: start; text-align: left; margin-top: 0.7rem; }
+    }
   </style>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
 </head>
 <body>
   <header>
@@ -128,25 +215,50 @@ input:focus, textarea:focus {
       <img src="https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/NFCLogo1.png" alt="Nest Capital Finance Logo" />
     </a>
   </header>
-<section class="contact-section">
-  <h1>Contact Us</h1>
-  <form>
-    <div class="form-grid">
-      <label for="fullName">Full Name</label>
-      <input type="text" id="fullName" name="fullName" placeholder="Your full name" required>
-
-      <label for="mobile">Mobile Number</label>
-      <input type="tel" id="mobile" name="mobile" placeholder="Your mobile number" required pattern="[0-9 ]{8,15}">
-
-      <label for="email">Email</label>
-      <input type="email" id="email" name="email" placeholder="Your email address" required>
-
-      <label for="reason">Reason to contact</label>
-      <textarea id="reason" name="reason" rows="3" placeholder="Type your reason here" required></textarea>
-    </div>
-    <button type="submit" class="cta-button">Send Message</button>
-  </form>
-</section>
-
+  <div class="contact-layout">
+    <aside class="contact-details">
+      <h2>Let's Chat</h2>
+      <h4>Arrange a free chat with us today</h4>
+      <div class="descriptor">
+        Are you ready to enjoy the Nest Capital experience? Let us help you get finance, property advice, or just grow your wealth. Call or email now!
+      </div>
+      <ul class="info-list">
+        <li>
+          <span class="icon"><i class="fa-solid fa-phone"></i></span>
+          03 9421 1651
+        </li>
+        <li>
+          <span class="icon"><i class="fa-solid fa-envelope"></i></span>
+          info@nestcapital.com.au
+        </li>
+        <li>
+          <span class="icon"><i class="fa-solid fa-location-dot"></i></span>
+          Level 5, 9-11 Cremorne St, Cremorne VIC 3121
+        </li>
+      </ul>
+      <div class="contact-social">
+        <a href="#" title="Instagram"><i class="fab fa-instagram"></i></a>
+        <a href="#" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+        <a href="#" title="Facebook"><i class="fab fa-facebook-f"></i></a>
+      </div>
+    </aside>
+    <section class="contact-section">
+      <h1>Contact Us</h1>
+      <form>
+        <div class="form-grid">
+          <label for="fullName">Full Name</label>
+          <input type="text" id="fullName" name="fullName" placeholder="Your full name" required>
+          <label for="mobile">Mobile Number</label>
+          <input type="tel" id="mobile" name="mobile" placeholder="Your mobile number" required pattern="[0-9 ]{8,15}">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" placeholder="Your email address" required>
+          <label for="reason">Reason to contact</label>
+          <textarea id="reason" name="reason" rows="3" placeholder="Type your reason here" required></textarea>
+        </div>
+        <button type="submit" class="cta-button">Send Message</button>
+      </form>
+    </section>
+  </div>
 </body>
 </html>
+
