--- a/Services.html
+++ b/Services.html
@@ -22,14 +22,81 @@
       padding: 0;
       z-index: 99;
     }
-    header a img {
+    header a img, header img {
       height: 100px;
       margin-left: 4rem;
       margin-top: 2.5rem;
       filter: brightness(0) invert(1);
+      display: inline-block;
     }
+    nav {
+      flex: 1;
+      display: flex;
+      justify-content: flex-end;
+      align-items: flex-start;
+      padding-right: 3rem;
+      margin-top: 2.6rem;
+      gap: 2.2rem;
+      position: relative;
+    }
+    .dropdown {
+      position: relative;
+      display: inline-block;
+    }
+    .dropbtn, nav > a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 600;
+      font-size: 1rem;
+      transition: color 0.2s;
+      letter-spacing: .5px;
+      background: none;
+      border: none;
+      outline: none;
+      cursor: pointer;
+      padding: 0;
+      font-family: inherit;
+      position: relative;
+      z-index: 1002;
+      margin: 0 0.35rem;
+    }
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      top: 100%;
+      left: 0;
+      right: auto;
+      background-color: #232b34;
+      min-width: 210px;
+      box-shadow: 0 8px 18px 0 rgba(0,0,0,0.22);
+      border-radius: 7px;
+      z-index: 999;
+      padding: 0.4rem 0;
+      margin-top: 0.7rem;
+    }
+    .dropdown-content a {
+      color: #fff;
+      padding: 0.9rem 1.5rem;
+      text-decoration: none;
+      display: block;
+      font-size: 1rem;
+      transition: background .17s, color .17s;
+      border-radius: 4px;
+      white-space: nowrap;
+    }
+    .dropdown-content a:hover {
+      background-color: #363d48;
+      color: #b6befb;
+    }
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
+    nav > a:hover, .dropbtn:hover {
+      color: #606060;
+    }
+    /* --- Services Page Styles --- */
     main {
-      padding-top: 130px; /* creates space for logo/header */
+      padding-top: 130px;
     }
     h1 {
       font-size: 2.6rem;
@@ -38,20 +105,6 @@
       text-align: center;
       font-weight: 700;
     }
-    .dropdown-content {
-  display: none;
-  position: absolute;
-  top: 100%;       /* aligns dropdown just below the button */
-  left: 0;         /* aligns left edge with parent */
-  background-color: #232b34;
-  min-width: 200px;
-  box-shadow: 0 8px 18px 0 rgba(0,0,0,0.22);
-  border-radius: 7px;
-  margin-top: 0.7rem;
-  z-index: 1001;
-  padding: 0.4rem 0;
-}
-
     .services-section {
       max-width: 1000px;
       margin: 2rem auto;
@@ -110,6 +163,10 @@
       text-align: center;
     }
     @media (max-width: 900px) {
+      nav {
+        gap: 1.1rem;
+        padding-right: 1.2rem;
+      }
       .services-animated {
         flex-direction: column;
         align-items: center;
@@ -126,40 +183,38 @@
       <img src="https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/NFCLogo1.png" alt="Nest Capital Finance Logo" />
     </a>
     <nav>
-  <div class="dropdown">
-    <a href="Services.html" class="dropbtn">Services</a>
-    <div class="dropdown-content">
-      <a href="Services.html#home-loans">Home Loans</a>
-      <a href="Services.html#property-advisory">Property Advisory</a>
-      <a href="Services.html#asset-finance">Asset Finance</a>
-    </div>
-  </div>
-  <div class="dropdown">
-    <a href="about.html" class="dropbtn">About</a>
-    <div class="dropdown-content">
-      <a href="about.html">Company Mission</a>
-      <a href="about.html">Meet Our Team</a>
-    </div>
-  </div>
-  <div class="dropdown">
-    <a href="#partners" class="dropbtn">Partners</a>
-    <div class="dropdown-content">
-      <a href="#">Coming Soon</a>
-    </div>
-  </div>
-  <div class="dropdown">
-    <a href="#resources" class="dropbtn">Resources</a>
-    <div class="dropdown-content">
-      <a href="#calculators">Home Loan Calculators</a>
-      <a href="#lender-panel">Lender Panel</a>
-      <a href="#blogs">Blogs</a>
-      <a href="#faqs">FAQs</a>
-    </div>
-  </div>
-  <a href="contact.html">Contact</a>
-</nav>
-
-    
+      <div class="dropdown">
+        <a href="Services.html" class="dropbtn">Services</a>
+        <div class="dropdown-content">
+          <a href="Services.html#home-loans">Home Loans</a>
+          <a href="Services.html#property-advisory">Property Advisory</a>
+          <a href="Services.html#asset-finance">Asset Finance</a>
+        </div>
+      </div>
+      <div class="dropdown">
+        <a href="about.html" class="dropbtn">About</a>
+        <div class="dropdown-content">
+          <a href="about.html">Company Mission</a>
+          <a href="about.html">Meet Our Team</a>
+        </div>
+      </div>
+      <div class="dropdown">
+        <a href="#" class="dropbtn">Partners</a>
+        <div class="dropdown-content">
+          <a href="#">Coming Soon</a>
+        </div>
+      </div>
+      <div class="dropdown">
+        <a href="#" class="dropbtn">Resources</a>
+        <div class="dropdown-content">
+          <a href="#">Home Loan Calculators</a>
+          <a href="#">Lender Panel</a>
+          <a href="#">Blogs</a>
+          <a href="#">FAQs</a>
+        </div>
+      </div>
+      <a href="contact.html">Contact</a>
+    </nav>
   </header>
   <main>
     <section class="services-section">
@@ -184,45 +239,45 @@
     </section>
   </main>
   <script>
-document.querySelectorAll('.dropdown').forEach(function(drop, idx, arr) {
-  var content = drop.querySelector('.dropdown-content');
+    // Dropdown instant switcher for quick nav
+    document.querySelectorAll('.dropdown').forEach(function(drop, idx, arr) {
+      var content = drop.querySelector('.dropdown-content');
 
-  drop.addEventListener('mouseenter', function () {
-    // Close all dropdown contents first
-    arr.forEach(function(other) {
-      var otherContent = other.querySelector('.dropdown-content');
-      if (otherContent && otherContent !== content) {
-        otherContent.style.display = 'none';
+      drop.addEventListener('mouseenter', function () {
+        arr.forEach(function(other) {
+          var otherContent = other.querySelector('.dropdown-content');
+          if (otherContent && otherContent !== content) {
+            otherContent.style.display = 'none';
+          }
+        });
+        if (content) content.style.display = 'block';
+      });
+
+      drop.addEventListener('mouseleave', function() {
+        if (content) {
+          setTimeout(function() {
+            if (!drop.matches(':hover') && !content.matches(':hover')) {
+              content.style.display = 'none';
+            }
+          }, 800);
+        }
+      });
+
+      if (content) {
+        content.addEventListener('mouseenter', function () {
+          content.style.display = 'block';
+        });
+        content.addEventListener('mouseleave', function () {
+          setTimeout(function() {
+            if (!drop.matches(':hover') && !content.matches(':hover')) {
+              content.style.display = 'none';
+            }
+          }, 800);
+        });
       }
     });
-    if (content) content.style.display = 'block';
-  });
-
-  drop.addEventListener('mouseleave', function() {
-    if (content) {
-      setTimeout(function() {
-        // Only hide if not already active from another hover (prevents close on quick nav)
-        if (!drop.matches(':hover') && !content.matches(':hover')) {
-          content.style.display = 'none';
-        }
-      }, 800);
-    }
-  });
-
-  if (content) {
-    content.addEventListener('mouseenter', function () {
-      content.style.display = 'block';
-    });
-    content.addEventListener('mouseleave', function () {
-      setTimeout(function() {
-        if (!drop.matches(':hover') && !content.matches(':hover')) {
-          content.style.display = 'none';
-        }
-      }, 800);
-    });
-  }
-});
-</script>
+  </script>
 </body>
 </html>
+
 
