--- a/contact.html
+++ b/contact.html
@@ -23,14 +23,80 @@
       padding: 0;
       z-index: 99;
     }
-    header a img {
+    header a img, header img {
       height: 100px;
       margin-left: 4rem;
       margin-top: 2.5rem;
       filter: brightness(0) invert(1);
+      display: inline-block;
+    }
+    nav {
+      flex: 1;
+      display: flex;
+      justify-content: flex-end;
+      align-items: flex-start;
+      padding-right: 3rem;
+      margin-top: 2.6rem;
+      gap: 2.2rem;
+      position: relative;
+    }
+    .dropdown {
+      position: relative;
+      display: inline-block;
+    }
+    .dropbtn, nav > a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 600;
+      font-size: 1rem;
+      transition: color 0.2s;
+      letter-spacing: .5px;
+      background: none;
+      border: none;
+      outline: none;
+      cursor: pointer;
+      padding: 0;
+      font-family: inherit;
+      position: relative;
+      z-index: 1002;
+      margin: 0 0.35rem;
+    }
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      top: 100%;
+      left: 0;
+      right: auto;
+      background-color: #232b34;
+      min-width: 210px;
+      box-shadow: 0 8px 18px 0 rgba(0,0,0,0.22);
+      border-radius: 7px;
+      z-index: 999;
+      padding: 0.4rem 0;
+      margin-top: 0.7rem;
+    }
+    .dropdown-content a {
+      color: #fff;
+      padding: 0.9rem 1.5rem;
+      text-decoration: none;
+      display: block;
+      font-size: 1rem;
+      transition: background .17s, color .17s;
+      border-radius: 4px;
+      white-space: nowrap;
+    }
+    .dropdown-content a:hover {
+      background-color: #363d48;
+      color: #b6befb;
+    }
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
+    nav > a:hover, .dropbtn:hover {
+      color: #606060;
     }
     main {
-      padding-top: 130px; /* Ensures main content sits below logo/header */
+      padding-top: 130px;
     }
     .contact-layout {
       display: flex;
@@ -175,54 +241,8 @@
     input:focus, textarea:focus {
       border: 1.5px solid #2563eb;
     }
-    /* Uniform placeholder style for all browsers */
     input::placeholder,
     textarea::placeholder {
-      color: #8c92ac;
-      font-family: inherit;
-      font-size: 1rem;
-      font-weight: 300;
-      opacity: 1;
-      letter-spacing: 0;
-    }
-    input::-webkit-input-placeholder,
-    textarea::-webkit-input-placeholder {
-      color: #8c92ac;
-      font-family: inherit;
-      font-size: 1rem;
-      font-weight: 300;
-      opacity: 1;
-      letter-spacing: 0;
-    }
-    input:-ms-input-placeholder,
-    textarea:-ms-input-placeholder {
-      color: #8c92ac;
-      font-family: inherit;
-      font-size: 1rem;
-      font-weight: 300;
-      opacity: 1;
-      letter-spacing: 0;
-    }
-    input::-ms-input-placeholder,
-    textarea::-ms-input-placeholder {
-      color: #8c92ac;
-      font-family: inherit;
-      font-size: 1rem;
-      font-weight: 300;
-      opacity: 1;
-      letter-spacing: 0;
-    }
-    input::-moz-placeholder,
-    textarea::-moz-placeholder {
-      color: #8c92ac;
-      font-family: inherit;
-      font-size: 1rem;
-      font-weight: 300;
-      opacity: 1;
-      letter-spacing: 0;
-    }
-    input:-moz-placeholder,
-    textarea:-moz-placeholder {
       color: #8c92ac;
       font-family: inherit;
       font-size: 1rem;
@@ -261,6 +281,12 @@
       .contact-section, .contact-details { max-width: 97vw; }
       main { padding-top: 130px; }
     }
+    @media (max-width: 900px) {
+      nav {
+        gap: 1.1rem;
+        padding-right: 1.2rem;
+      }
+    }
     @media (max-width: 700px) {
       header { padding: 1.2rem .7rem;}
       .contact-layout { gap: 1.8rem; }
@@ -278,41 +304,39 @@
     <a href="index.html">
       <img src="https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/NFCLogo1.png" alt="Nest Capital Finance Logo" />
     </a>
-<nav>
-  <div class="dropdown">
-    <a href="Services.html" class="dropbtn">Services</a>
-    <div class="dropdown-content">
-      <a href="Services.html#home-loans">Home Loans</a>
-      <a href="Services.html#property-advisory">Property Advisory</a>
-      <a href="Services.html#asset-finance">Asset Finance</a>
-    </div>
-  </div>
-  <div class="dropdown">
-    <a href="about.html" class="dropbtn">About</a>
-    <div class="dropdown-content">
-      <a href="about.html">Company Mission</a>
-      <a href="about.html">Meet Our Team</a>
-    </div>
-  </div>
-  <div class="dropdown">
-    <a href="#partners" class="dropbtn">Partners</a>
-    <div class="dropdown-content">
-      <a href="#">Coming Soon</a>
-    </div>
-  </div>
-  <div class="dropdown">
-    <a href="#resources" class="dropbtn">Resources</a>
-    <div class="dropdown-content">
-      <a href="#calculators">Home Loan Calculators</a>
-      <a href="#lender-panel">Lender Panel</a>
-      <a href="#blogs">Blogs</a>
-      <a href="#faqs">FAQs</a>
-    </div>
-  </div>
-  <a href="contact.html">Contact</a>
-</nav>
-
-    
+    <nav>
+      <div class="dropdown">
+        <a href="Services.html" class="dropbtn">Services</a>
+        <div class="dropdown-content">
+          <a href="Services.html#home-loans">Home Loans</a>
+          <a href="Services.html#property-advisory">Property Advisory</a>
+          <a href="Services.html#asset-finance">Asset Finance</a>
+        </div>
+      </div>
+      <div class="dropdown">
+        <a href="about.html" class="dropbtn">About</a>
+        <div class="dropdown-content">
+          <a href="about.html">Company Mission</a>
+          <a href="about.html">Meet Our Team</a>
+        </div>
+      </div>
+      <div class="dropdown">
+        <a href="#" class="dropbtn">Partners</a>
+        <div class="dropdown-content">
+          <a href="#">Coming Soon</a>
+        </div>
+      </div>
+      <div class="dropdown">
+        <a href="#" class="dropbtn">Resources</a>
+        <div class="dropdown-content">
+          <a href="#">Home Loan Calculators</a>
+          <a href="#">Lender Panel</a>
+          <a href="#">Blogs</a>
+          <a href="#">FAQs</a>
+        </div>
+      </div>
+      <a href="contact.html">Contact</a>
+    </nav>
   </header>
   <main>
     <div class="contact-layout">
@@ -329,7 +353,7 @@
           </li>
           <li>
             <span class="icon"><i class="fa-solid fa-envelope"></i></span>
-            info@nestcapital.com.au
+            <a href="mailto:info@nestcapital.com.au" style="color: inherit; text-decoration: underline;">info@nestcapital.com.au</a>
           </li>
           <li>
             <span class="icon"><i class="fa-solid fa-location-dot"></i></span>
@@ -361,45 +385,44 @@
     </div>
   </main>
   <script>
-document.querySelectorAll('.dropdown').forEach(function(drop, idx, arr) {
-  var content = drop.querySelector('.dropdown-content');
+    document.querySelectorAll('.dropdown').forEach(function(drop, idx, arr) {
+      var content = drop.querySelector('.dropdown-content');
 
-  drop.addEventListener('mouseenter', function () {
-    // Close all dropdown contents first
-    arr.forEach(function(other) {
-      var otherContent = other.querySelector('.dropdown-content');
-      if (otherContent && otherContent !== content) {
-        otherContent.style.display = 'none';
+      drop.addEventListener('mouseenter', function () {
+        arr.forEach(function(other) {
+          var otherContent = other.querySelector('.dropdown-content');
+          if (otherContent && otherContent !== content) {
+            otherContent.style.display = 'none';
+          }
+        });
+        if (content) content.style.display = 'block';
+      });
+
+      drop.addEventListener('mouseleave', function() {
+        if (content) {
+          setTimeout(function() {
+            if (!drop.matches(':hover') && !content.matches(':hover')) {
+              content.style.display = 'none';
+            }
+          }, 800);
+        }
+      });
+
+      if (content) {
+        content.addEventListener('mouseenter', function () {
+          content.style.display = 'block';
+        });
+        content.addEventListener('mouseleave', function () {
+          setTimeout(function() {
+            if (!drop.matches(':hover') && !content.matches(':hover')) {
+              content.style.display = 'none';
+            }
+          }, 800);
+        });
       }
     });
-    if (content) content.style.display = 'block';
-  });
-
-  drop.addEventListener('mouseleave', function() {
-    if (content) {
-      setTimeout(function() {
-        // Only hide if not already active from another hover (prevents close on quick nav)
-        if (!drop.matches(':hover') && !content.matches(':hover')) {
-          content.style.display = 'none';
-        }
-      }, 800);
-    }
-  });
-
-  if (content) {
-    content.addEventListener('mouseenter', function () {
-      content.style.display = 'block';
-    });
-    content.addEventListener('mouseleave', function () {
-      setTimeout(function() {
-        if (!drop.matches(':hover') && !content.matches(':hover')) {
-          content.style.display = 'none';
-        }
-      }, 800);
-    });
-  }
-});
-</script>
+  </script>
 </body>
 </html>
+
 
